--- a/src/ui/files/components/FilePicker.scss
+++ b/src/ui/files/components/FilePicker.scss
@@ -46,6 +46,7 @@
     }
 
     .file-checkbox {
+      justify-content: flex-end;
       visibility: visible;
     }
   }
